# RKDG2D

./: .gitignore  .~lock.scheme.odg#  CMakeLists.txt  CMakeLists.txt.user.466caab  CMakeLists.txt.user.63dd524  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  DG_MPI.cpp  Doxyfile  Edge.cpp  Edge.h  Flux.cpp  Flux.h  Mesh2D.cpp  Mesh2D.h  Mesh_BlockedCircle.unv  Mesh_Circle.unv  Mesh_CircleQuad.unv  Mesh_CircleTriag.unv  Mesh_R15_rot30.unv  Mesh_Rot.unv  Problem.cpp  Problem.h  README.md  RKDG2D-old  RKDG2D.cpp  RKDG2D.pro  RKDG2D.pro.user.35958b8  RKDG2D.pro.user.63dd524  RKDGCell.cpp  RKDGCell.h  alphaCoeffs  analitAcoustic1.nb  analitAcousticBox.nb  defs.cpp  defs.h  fluxllf.cpp  fluxllf.h  gaussintegrator.cpp  (+10 more)
Release/RKDG2D.tlog/: CL.read.1.tlog  CL.write.1.tlog  RKDG2D.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
analytic/: analitAcousticPlane.nb
build-converterUNV-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  converterUNV  converterUNV.cbp
build-converterUNV-Desktop-u041eu0442u043bu0430u0434u043au0430/: CMakeCache.txt  Makefile  cmake_install.cmake  converterUNV.cbp
build-converterUNV-Desktop-u041fu043e u0443u043cu043eu043bu0447u0430u043du0438u044e/: CMakeCache.txt  Makefile  cmake_install.cmake  converterUNV.cbp
converterToVTK/: CMakeLists.txt  converterToVTK.cpp  numvector.h
converterToVTK/Basis/: Basis.h
converterToVTK/Mesh/: Edge.cpp  Edge.h  Mesh.cpp  Mesh.h
converterToVTK/Params/: Params.h
converterToVTK/Physics/: Physics.cpp
converterToVTK/Solution/: Solution.cpp  Solution.h
converterToVTK/Writer/: Writer.cpp  Writer.h
converterToVTK/defs/: defs.cpp  defs.h
converterUNV/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.63dd524  CMakeLists.txt.user.7b9ea08  FileConverter.cpp  FileConverter.h  Mesh_Square2_002.unv  main.cpp  mesh2D  oneCell.unv  small_nozzle.unv  small_sq.unv  sod1.unv  sodRectTriag100.unv  super_small.unv  tube2D.unv
data/10x/: mesh2D
data/20x/: mesh2D
data/40x/: mesh2D
data/80x/: mesh2D
decomposeUNV/: CMakeLists.txt  DecomposerUNV.cpp  DecomposerUNV.h  Mesh_4x4.unv  main.cpp  square10.unv
doc/html/: Adams_8h.html  Adams_8h_source.html  BoundaryConstant_8h.html  BoundaryConstant_8h_source.html  BoundaryOpen_8h.html  BoundaryOpen_8h_source.html  BoundarySineDir_8h.html  BoundarySineDir_8h_source.html  BoundarySine_8h.html  BoundarySine_8h_source.html  BoundarySlip_8h.html  BoundarySlip_8h_source.html  Boundary_8h.html  Boundary_8h_source.html  Cell_8h.html  Cell_8h_source.html  EdgeBoundaryDiagProjection_8h.html  EdgeBoundaryDiagProjection_8h_source.html  EdgeBoundary_8h.html  EdgeBoundary_8h_source.html  EdgeInternal_8h.html  EdgeInternal_8h_source.html  Edge_8h.html  Edge_8h_source.html  FluxHLLC_8h.html  FluxHLLC_8h_source.html  FluxHLL_8h.html  FluxHLL_8h_source.html  FluxLLF_8h.html  FluxLLF_8h_source.html  Flux_8h.html  Flux_8h_source.html  IndicatorEverywhere_8h.html  IndicatorEverywhere_8h_source.html  IndicatorKXRCF_8h.html  IndicatorKXRCF_8h_source.html  IndicatorNowhere_8h.html  IndicatorNowhere_8h_source.html  Indicator_8h.html  Indicator_8h_source.html  (+176 more)
meshCollection/: Mesh_1.unv  Mesh_2.unv  Mesh_Circular.unv  Mesh_Circular1L.unv  Mesh_OneCell.unv  Mesh_R15.unv  Mesh_R15_rot.unv  Mesh_R30.unv  Mesh_Sode_1.unv  Mesh_Sode_15.unv  Mesh_Sode_1_moved.unv  Mesh_Sode_5.unv  Mesh_Triangle.unv  Mesh_Triangle2.unv  Mesh_TwoCells.unv  Mesh_acoustic_nr120.unv  Mesh_forwardStep_00125.unv  Mesh_forwardStep_0025.unv  Mesh_forwardStep_005.unv
rectangularMeshGenerator/: CMakeLists.txt
src/: Buffers.h  Params.h  for_doxygen.h  not-needed-now.rar  numvector.h  numvector.h_new
src/Basis/: Basis.cpp  Basis.h
src/Boundary/: Boundary.h  BoundaryConstant.cpp  BoundaryConstant.h  BoundaryInlet.cpp  BoundaryInlet.h  BoundaryNonSlip.cpp  BoundaryNonSlip.h  BoundaryNozzleInlet.cpp  BoundaryNozzleInlet.h  BoundaryOpen.cpp  BoundaryOpen.cpp.autosave  BoundaryOpen.h  BoundaryOpenFixedPressure.cpp  BoundaryOpenFixedPressure.h  BoundaryOpenTotalPressure.cpp  BoundaryOpenTotalPressure.h  BoundaryPeriodic.cpp  BoundaryPeriodic.h  BoundarySine.cpp  BoundarySine.h  BoundarySineDir.cpp  BoundarySineDir.h  BoundarySlip.cpp  BoundarySlip.h  BoundarySubsonicInletFixedPressure.cpp  BoundarySubsonicInletFixedPressure.h  BoundarySubsonicInletTotalPressure.cpp  BoundarySubsonicInletTotalPressure.h
src/DDT/: Adams.cpp  Adams.h  RungeKutta.cpp  RungeKutta.h  ddt.h
src/Flux/: Flux.cpp  Flux.h  FluxHLL.cpp  FluxHLL.h  FluxHLLC.cpp  FluxHLLC.h  FluxLLF.cpp  FluxLLF.h  FluxPh.cpp  FluxPh.h  FluxViscous.cpp  FluxViscous.h
src/Indicator/: Indicator.cpp  Indicator.h  IndicatorBJ.cpp  IndicatorBJ.h  IndicatorEverywhere.cpp  IndicatorEverywhere.h  IndicatorHarten.cpp  IndicatorHarten.h  IndicatorKXRCF.cpp  IndicatorKXRCF.h  IndicatorNowhere.cpp  IndicatorNowhere.h  IndicatorShu.cpp  IndicatorShu.h
src/Integrator/: gaussintegrator.cpp  gaussintegrator.h
src/Limiter/: Limiter.cpp  Limiter.h  LimiterBJ.cpp  LimiterBJ.h  LimiterBJVertex.cpp  LimiterBJVertex.h  LimiterFinDiff.cpp  LimiterFinDiff.h  LimiterMUSCL.cpp  LimiterMUSCL.h  LimiterRiemannBJ.cpp  LimiterRiemannBJ.h  LimiterRiemannWENOS.cpp  LimiterRiemannWENOS.h  LimiterWENOS.cpp  LimiterWENOS.cpp1  LimiterWENOS.h  LimiterWENOS.h1
src/Mesh/: .Mesh2D.cpp.swp  Cell.cpp  Cell.h  Edge.cpp  Edge.h  EdgeBoundary.cpp  EdgeBoundary.h  EdgeBoundaryDiagProjection.cpp  EdgeBoundaryDiagProjection.h  EdgeBoundaryInfty.cpp  EdgeBoundaryInfty.h  EdgeBoundaryOpen.cpp  EdgeBoundaryOpen.h  EdgeBoundarySlip.cpp  EdgeBoundarySlip.h  EdgeInternal.cpp  EdgeInternal.h  Mesh.cpp  Mesh.cpp_1  Mesh.h  Mesh.h_1  Mesh2D.cpp  Mesh2D.h  Patch.h  Point.h  RKDGCell.h
src/Params/: Params.h
src/Physics/: Physics.cpp  Physics.h
src/Probes/: probes.cpp  probes.h
src/Problem/: Problem.cpp  Problem.h
src/Solution/: Solution.cpp  Solution.h
src/Solver/: Solver.cpp  Solver.h  SolverHybrid.cpp  SolverHybrid.h
src/Time/: Time.h  TimeClass.cpp  TimeClass.h
tests/: compServiceTests.cpp  simple_test.cpp
(+43 files in other folders)
